--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -107,6 +107,77 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:layout_width="200dp"
+                            android:layout_height="150dp"
+                            android:id="@+id/company3"
+                            android:scaleType="centerCrop"
+                            app:shapeAppearanceOverlay="@style/RoundedSquare"
+                            android:src="@drawable/crm_image"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="CRM"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"
+                            android:textSize="20dp"/>
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="match_parent"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:layout_width="200dp"
+                            android:layout_height="150dp"
+                            android:id="@+id/company4"
+                            android:scaleType="centerCrop"
+                            app:shapeAppearanceOverlay="@style/RoundedSquare"
+                            android:src="@drawable/collaboration_image"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Collaboration tools"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"
+                            android:textSize="20dp"/>
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:id="@+id/company2"
+                            android:layout_width="200dp"
+                            android:layout_height="150dp"
+                            android:scaleType="centerCrop"
+                            app:shapeAppearanceOverlay="@style/RoundedSquare"
+                            android:src="@drawable/ecommerce_image" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="E-commerce"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"
+                            android:textSize="20dp"/>
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="match_parent"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
 
                         <com.google.android.material.imageview.ShapeableImageView
@@ -137,86 +208,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:id="@+id/company2"
-                            android:layout_width="200dp"
-                            android:layout_height="150dp"
-                            android:scaleType="centerCrop"
-                            app:shapeAppearanceOverlay="@style/RoundedSquare"
-                            android:src="@drawable/ecommerce_companies" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="E-commerce"
-                            android:textAlignment="center"
-                            android:textColor="@color/black"
-                            android:textSize="20dp"/>
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="10dp"
-                        android:layout_height="match_parent"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:layout_width="200dp"
-                            android:layout_height="150dp"
-                            android:id="@+id/company3"
-                            android:scaleType="centerCrop"
-                            app:shapeAppearanceOverlay="@style/RoundedSquare"
-                            android:src="@drawable/crm_companies"/>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="CRM"
-                            android:textAlignment="center"
-                            android:textColor="@color/black"
-                            android:textSize="20dp"/>
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="10dp"
-                        android:layout_height="match_parent"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:layout_width="200dp"
-                            android:layout_height="150dp"
-                            android:id="@+id/company4"
-                            android:scaleType="centerCrop"
-                            app:shapeAppearanceOverlay="@style/RoundedSquare"
-                            android:src="@drawable/collaboration_companies"/>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Collaboration tools"
-                            android:textAlignment="center"
-                            android:textColor="@color/black"
-                            android:textSize="20dp"/>
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="10dp"
-                        android:layout_height="match_parent"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
                         <com.google.android.material.imageview.ShapeableImageView
                             android:layout_width="200dp"
                             android:layout_height="150dp"
                             app:shapeAppearanceOverlay="@style/RoundedSquare"
                             android:id="@+id/company5"
-                            android:src="@drawable/cloudcomputing_companies"/>
+                            android:src="@drawable/cloud_image"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -240,7 +237,7 @@
                             android:scaleType="centerCrop"
                             android:id="@+id/company6"
                             app:shapeAppearanceOverlay="@style/RoundedSquare"
-                            android:src="@drawable/communication_companies"/>
+                            android:src="@drawable/communication_image"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -265,7 +262,7 @@
                             android:id="@+id/company7"
                             android:scaleType="centerCrop"
 
-                            android:src="@drawable/advertisement_companies"/>
+                            android:src="@drawable/advertisement_image"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -312,7 +309,7 @@
                             android:layout_height="150dp"
                             app:shapeAppearanceOverlay="@style/RoundedSquare"
                             android:id="@+id/company10"
-                            android:src="@drawable/investment_companies"/>
+                            android:src="@drawable/investment_image"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -337,7 +334,7 @@
                             android:id="@+id/company12"
                             app:shapeAppearanceOverlay="@style/RoundedSquare"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/entertainment_companies"/>
+                            android:src="@drawable/ott_image"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
