HI , JUST FINISHED AND TESTED
 ➡️ X-FLOW PREMIUM ADDED
 ➡️ANIMATION ADDED
 ➡️PROFILE ACTIVITY ADDED
 ➡️IMPROVED LANDING PAGE
 ➡
 FINAL PUSH

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,7 +19,7 @@
         android:layout_marginTop="208dp"
         android:background="@drawable/edit_text_background"
         android:ems="10"
-        android:hint="FullName"
+        android:hint="Name"
         android:inputType="textPersonName"
         android:padding="10dp"
         android:singleLine="false"
