--- a/app/src/main/res/drawable/pfbotom.xml
+++ b/app/src/main/res/drawable/pfbotom.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:bottomLeftRadius="20dp"
- android:bottomRightRadius="20dp"/>
+    <corners android:topLeftRadius="21dp"
+         android:topRightRadius="21dp"/>
 
 
     <gradient
         android:angle="45"
-        android:startColor="#3300CC"
-        android:endColor="#3300CC" />
+        android:startColor="#5649DF"
+        android:endColor="#5649DF" />
 </shape>
