--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -4,54 +4,97 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="5sp"
+    android:gravity="center"
     android:background="@color/white">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="10dp" />
+    
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:paddingEnd="18dp"
+        android:layout_height="130dp"
+        android:id="@+id/layout1"
         android:background="@drawable/barbag"
-        android:layout_marginBottom="25dp"
-        android:layout_gravity="start|end"
+        android:layout_gravity="center"
         android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:background="@drawable/mjbarlinerbag"
+            android:layout_height="match_parent">
 
 
-        <TextView
-            android:layout_width="57dp"
-            android:layout_height="51dp"
-            android:layout_gravity="start|top"
-            android:layout_margin="20dp"
-            android:text="Hello,"
-            android:textStyle="bold"
-            android:fontFamily="@font/font6"
-            android:textColor="@color/white"
-            android:textSize="22sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|top"
+                android:text="Hello,👋"
+                android:textStyle="bold"
+                android:fontFamily="@font/font6"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="13dp"/>
+
+
+            <TextView
+                android:id="@+id/profilename"
+                android:layout_width="155dp"
+                android:layout_height="31dp"
+                android:fontFamily="@font/font6"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:text="Suhash Indirgi"
+                android:textSize="21sp" />
+            
+            
+        </LinearLayout>
+        <View
+            android:layout_width="100dp"
+            android:layout_height="0dp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:gravity="top"
+            android:paddingTop="20dp"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/pfimage"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/pfphoto" />
+
+            <TextView
+                android:id="@+id/pftext"
+                android:layout_width="57dp"
+                android:layout_height="51dp"
+                android:layout_gravity="center"
+                android:text="Profile"
+                android:textStyle="bold"
+                android:fontFamily="@font/font6"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
+
+
+        </LinearLayout>
 
 
 
-        <TextView
-            android:id="@+id/profilename"
-            android:layout_width="155dp"
-            android:layout_height="31dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_gravity="start|top"
-            android:fontFamily="@font/font6"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="18sp" />
+        </LinearLayout>
+            
 
-        <ImageView
-            android:layout_width="60dp"
-            android:foregroundGravity="center"
-            android:layout_height="60dp"
-            android:paddingTop="8dp"
-            android:src="@drawable/pfphoto" />
+
+       
 
     </LinearLayout>
 
@@ -61,6 +104,7 @@
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
+            android:padding="13dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -77,6 +121,7 @@
                 android:layout_height="75dp"/>
 
             <TextView
+                android:id="@+id/companycat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Company Categories"
@@ -354,6 +399,7 @@
                 android:layout_height="75dp" />
 
             <TextView
+                android:id="@+id/rcblock"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
@@ -370,10 +416,10 @@
                 android:layout_height="20dp"/>
 
             <LinearLayout
+                android:id="@+id/Buttonlayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-
                 android:gravity="center">
 
                 <Button
